title:align - fixed the convseration title alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,3 +34,6 @@
     float:left;
     margin:2px;
 }
+#conversationTitle{
+    text-align: center;
+}
